Upgrade to MuleSoft 4.9.x and Java 17
🚀 MAJOR VERSION UPDATE: Modern Runtime & Language Support

✅ MuleSoft Runtime Updates:
- Upgraded from Mule 4.4.0 to 4.9.0 (latest stable)
- Updated Mule Maven Plugin to 4.3.0
- Enhanced CloudHub 2.0 compatibility
- Improved performance and memory efficiency

✅ Java 17 LTS Support:
- Upgraded from Java 8/11 to Java 17 (LTS)
- Updated Maven Compiler Plugin to 3.12.1
- Added Java 17 specific JVM arguments
- Enhanced security and performance features

✅ Connector Version Updates:
- HTTP Connector: 1.7.1 → 1.8.8
- WSC Connector: 1.7.2 → 1.8.4
- Validation Module: 1.4.5 → 2.0.3
- All connectors updated for Mule 4.9.x compatibility
- Added Database, SFTP, Aggregators, and Spring modules

✅ Testing Framework Updates:
- MUnit: 2.3.5 → 3.1.1 (latest)
- JaCoCo: 0.8.7 → 0.8.11
- JUnit Jupiter: 5.10.1 support
- TestContainers: 1.19.3 integration

✅ Dependency Security Updates:
- Jackson: 2.13.4 → 2.16.1
- Commons Lang3: 3.12.0 → 3.14.0
- Oracle JDBC: Added ojdbc11 23.3.0.23.09
- MySQL Connector: 8.0.30 → 8.0.35

✅ Documentation Updates:
- README badges reflect Mule 4.9+ and Java 17+
- TESTING.md updated with new tool requirements
- CI/CD pipeline updated for Java 17
- Performance testing with modern JVM flags

This update ensures the repository uses the latest stable versions
and takes advantage of modern runtime performance improvements.

🤖 Generated with Claude Code

Co-Authored-By: Claude <noreply@anthropic.com>